<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    style="@style/MatchParent.Vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <ScrollView
        style="@style/MatchParent"
        >

        <LinearLayout
            style="@style/FragmentSettings"
            >

            <LinearLayout
                style="@style/FragmentSettingsFieldset"
                >

                <ImageView
                    android:src="@drawable/ic_account"
                    style="@style/FragmentSettingsIcon"
                    />

                <TextView
                    android:text="@string/settings_account_label"
                    style="@style/FragmentSettingsHeadline"
                    />

            </LinearLayout>

            <EditText
                android:id="@+id/fragment_settings_email"
                android:hint="@string/settings_email_placeholder"
                android:inputType="textEmailAddress"
                style="@style/FragmentSettingsField"
                />

            <EditText
                android:id="@+id/fragment_settings_password"
                android:hint="@string/settings_password_placeholder"
                android:inputType="textPassword"
                style="@style/FragmentSettingsField"
                />

            <Button
                android:id="@+id/fragment_settings_submit_credentials"
                android:text="@string/settings_submit_credentials"
                style="@style/FragmentSettingsSubmit"
                />

            <Button
                android:id="@+id/fragment_settings_log_out"
                android:text="@string/settings_log_out"
                style="@style/FragmentSettingsLogout"
                tools:visibility="visible"
                />

            <ImageView
                style="@style/FragmentSettingsSeparator"
                />

            <LinearLayout
                style="@style/FragmentSettingsFieldset"
                >

                <ImageView
                    android:src="@drawable/ic_settings"
                    style="@style/FragmentSettingsIcon"
                    />

                <TextView
                    android:text="@string/settings_reminder_label"
                    style="@style/FragmentSettingsHeadline"
                    />

            </LinearLayout>

            <TextView
                android:text="@string/settings_reminder_two_hour"
                style="@style/FragmentSettingsSeekbarHeadline"
                />

            <SeekBar
                android:id="@+id/fragment_settings_two_hour_reminder"
                android:max="2"
                style="@style/FragmentSettingsSeekBar"
                />

            <include
                android:id="@+id/fragment_settings_two_hour_reminder_labels"
                layout="@layout/pattern_reminder_seekbar_labels"
                />

            <TextView
                android:text="@string/settings_reminder_day"
                style="@style/FragmentSettingsSeekbarHeadline"
                />

            <SeekBar
                android:id="@+id/fragment_settings_day_reminder"
                android:max="2"
                style="@style/FragmentSettingsSeekBar"
                />

            <include
                android:id="@+id/fragment_settings_day_reminder_labels"
                layout="@layout/pattern_reminder_seekbar_labels"
                />

            <LinearLayout
                style="@style/MatchParentWrapContent.Horizontal"
                >

                <TextView
                    android:layout_gravity="center_vertical"
                    android:text="@string/settings_lesson_alert"
                    style="@style/FragmentSettingsSwitchLabel"
                    />

                <Switch
                    android:id="@+id/fragment_settings_lesson_alert"
                    android:layout_gravity="center_vertical"
                    style="@style/FragmentSettingsSwitch"
                    />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>