<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    style="@style/MatchParentWrapContent.Horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <TextView
        android:id="@+id/pattern_reminder_seekbar_always"
        android:gravity="left"
        android:text="@string/settings_reminder_frequence_always"
        style="@style/FragmentSettingsSeekBarLabel"
        />

    <TextView
        android:id="@+id/pattern_reminder_seekbar_attending"
        android:gravity="center"
        android:text="@string/settings_reminder_frequence_attending"
        style="@style/FragmentSettingsSeekBarLabel"
        />

    <TextView
        android:id="@+id/pattern_reminder_seekbar_never"
        android:gravity="right"
        android:text="@string/settings_reminder_frequence_never"
        style="@style/FragmentSettingsSeekBarLabel"
        />

</LinearLayout>